--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# system environment
+.env
+
+# package-log
+package-lock.json
+
 # dependencies
+/dist
 /node_modules
 /.pnp
 .pnp.js
